# algo-task

./: README.md
AlgoLab 2_1/: CMakeLists.txt  adj_matrix.cpp  components.cpp  labyrinth.cpp  labyrinth2.cpp  orient_check.cpp  paral_check.cpp  pathbge1.cpp
AlgoLab 2_2/: CMakeLists.txt  bipartite.cpp  check.cpp  cond.cpp  cycle.cpp  game.cpp  game_2.cpp  graph.cpp  graph.h  hamiltonian.cpp  handmade_graph.cpp  handmade_graph.h  main.cpp  test.cpp  top_sort.cpp
AlgoLab_2_3/: CMakeLists.txt  avlset.h  chinese.cpp  chinese_notmine.cpp  deg.cpp  header.h  kruskal.cpp  spantree.cpp  spantree3.cpp
AlgoLab_2_4/: CMakeLists.txt  kpath.cpp  negcycle.cpp  path.cpp  pathbgep.cpp  pathmgep.cpp  pathsg.cpp
AlgoLab_2_5/: CMakeLists.txt  circulation.cpp  decomposition.cpp  matching.cpp  matching2.cpp  maxflow.cpp
AlgoLab_2_6/: CMakeLists.txt  prefix.cpp  search1.cpp  search2.cpp
