cmake_minimum_required(VERSION 3.13)
project(AlgoLab_2_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(AlgoLab_2_1 main.cpp)
add_executable(adj_matrix adj_matrix.cpp)
add_executable(orient_check orient_check.cpp)
add_executable(paral_check paral_check.cpp)
add_executable(components components.cpp)
add_executable(pathbge1 pathbge1.cpp)
add_executable(labyrinth labyrinth.cpp)
add_executable(labyrinth2 labyrinth2.cpp)