cmake_minimum_required(VERSION 3.13)
project(AlgoLab_2_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(AlgoLab_2_3 main.cpp)
add_executable(deg deg.cpp)
add_executable(spantree3 spantree3.cpp)
add_executable(spantree spantree.cpp)
add_executable(chinese chinese.cpp)
add_executable(chinese_notmine chinese_notmine.cpp)
add_executable(kruskal kruskal.cpp)